manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: kogda-igra
  name: kogda-igra
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: kogda-igra
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kogda-igra
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - kogda-igra
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - name: kogda-igra
        image: kogda-igra
#        livenessProbe:
#          failureThreshold: 5
#          httpGet:
#            path: /health/live
#            port: 8080
#            scheme: HTTP
#          initialDelaySeconds: 30
#        readinessProbe:
#          failureThreshold: 5
#          httpGet:
#            path: /health/ready
#            port: 8080
#            scheme: HTTP
#          initialDelaySeconds: 30
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 128Mi
