manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kogda-igra
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - override-me.ru
      secretName: override-me-ru-tls
  rules:
    - host: override-me.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kogda-igra
                port:
                  number: 80
